# gb-hardware-db

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.lock.license  Cargo.toml  LICENSE  README.markdown  REUSE.toml  devserver.js  gulpfile.js  justfile  package-lock.json  package-lock.json.license  package.json  tsconfig.json
.github/: dependabot.yml
.github/scripts/: install-sccache.sh
.github/workflows/: ci.yml
.reuse/: dep5
.travis/: deploy.sh
backend/: Cargo.toml
backend/src/: config.rs  hash.rs  input.rs  lib.rs  parser.rs  sha256.rs  time.rs
backend/src/config/: cartridge.rs
backend/src/input/: agb.rs  ags.rs  cartridge.rs  cgb.rs  dmg.rs  gbs.rs  mgb.rs  mgl.rs  mod.rs  oxy.rs  sgb.rs  sgb2.rs
backend/src/parser/: accelerometer.rs  agb_amp.rs  agb_cpu.rs  agb_pmic.rs  agb_ram.rs  agb_reg.rs  agb_soc.rs  agb_soc_bga.rs  agb_soc_qfp_128.rs  agb_soc_qfp_156.rs  agb_u4.rs  ags_charge_ctrl.rs  ags_pmic_new.rs  ags_pmic_old.rs  ags_u4.rs  ags_u5.rs  amic.rs  atmel.rs  bsi.rs  cgb_cpu.rs  cgb_reg.rs  cgb_soc.rs  cgb_stamp.rs  cic.rs  coil.rs  crystal.rs  crystal_20mihz.rs  crystal_32kihz.rs  crystal_32mihz.rs  crystal_4mihz.rs  crystal_8mihz.rs  dmg_amp.rs  dmg_cpu.rs  dmg_reg.rs  dmg_stamp.rs  eeprom.rs  flash.rs  fram.rs  fujitsu.rs  gbs_dol.rs  (+49 more)
backend/src/parser/flash/: tsop_i_32.rs  tsop_i_40.rs
backend/src/parser/rtc/: sop_20.rs  sop_8.rs
backend/src/parser/sram/: sop_28.rs  sop_32.rs  tsop_i_28.rs  tsop_i_48.rs
config/: games.json
content/: contribute-cartridges.markdown  contribute-oxy.markdown  home.markdown
data/Duo/GBS/1/: metadata.json
data/Duo/GBS/2/: metadata.json
data/ImATrackMan/SGB2/1/: metadata.json
data/YamamotoKaderate/DMG/G19667450/: metadata.json
data/cartridges/AGB-A2CP-0/3615retro-1/: metadata.json
data/cartridges/AGB-A7HJ-0/hdr-1/: metadata.json
deploy/: Cargo.toml
deploy/src/: main.rs
devserver/: Cargo.toml
devserver/src/: main.rs
model/: Cargo.toml
model/src/: hash.rs  input.rs  lib.rs  parser.rs  time.rs
model/src/config/: cartridge.rs
model/src/input/: agb.rs  ags.rs  cartridge.rs  cgb.rs  dmg.rs  gbs.rs  mgb.rs  mgl.rs  oxy.rs  sgb.rs  sgb2.rs
model/src/parser/: accelerometer.rs  agb_soc_bga.rs  agb_soc_qfp_128.rs  agb_soc_qfp_156.rs  ags_charge_ctrl.rs  amic.rs  analog.rs  atmel.rs  bsi.rs  cgb_soc.rs  cgb_stamp.rs  cic.rs  coil.rs  crosslink.rs  crystal_20mihz.rs  crystal_32kihz.rs  crystal_32mihz.rs  crystal_4mihz.rs  crystal_8mihz.rs  dmg_stamp.rs  eeprom.rs  fujitsu.rs  gen1_soc.rs  gen2_soc.rs  hudson.rs  hynix.rs  hyundai.rs  kds.rs  kinseki.rs  lcd_chip.rs  lcd_screen.rs  lgs.rs  lsi_logic.rs  macronix.rs  magnachip.rs  mapper.rs  mask_rom.rs  mitsubishi.rs  mitsumi.rs  mosel_vitelic.rs  (+23 more)
model/src/parser/sram/: sop_28.rs  tsop_i_28.rs
site/: Cargo.toml
site/content/: cartridges.markdown  consoles.markdown  contribute-cartridges.markdown  contribute-oxy.markdown  contribute-sgb.markdown  contribute-sgb2.markdown  contribute.markdown  home.markdown
site/src/: _common.scss  css.rs  csv_export.rs  format.rs  gbhwdb.scss  legacy.rs  main.rs  process.rs  site.rs  template.rs
site/src/csv_export/: agb.rs  ags.rs  cartridge.rs  cgb.rs  dmg.rs  gbs.rs  mgb.rs  mgl.rs  oxy.rs  sgb.rs  sgb2.rs
site/src/legacy/: cartridge.rs  chip.rs  console.rs  part.rs
site/src/process/: part.rs
site/src/template/: _console_page_chip.scss  _game_page.scss  _game_platform_page.scss  _listing_chip.scss  _listing_entry_cell.scss  _listing_part.scss  _mapper_listing.scss  _mapper_page.scss  _site_footer.scss  _site_header.scss  _submission_chip.scss  _submission_list.scss  _submission_part.scss  cartridge_board_page.rs  cartridge_page.rs  cartridges.rs  console_page.rs  console_submission_list.rs  contributor_cartridges.rs  dmg_console_page.rs  dmg_submission_list.rs  game.rs  game_page.rs  game_platform_page.rs  gb_cartridges.rs  gba_cartridges.rs  home.rs  listing_chip.rs  listing_entry_cell.rs  listing_part.rs  listing_photos_cell.rs  mapper.rs  mapper_page.rs  markdown.rs  markdown_page.rs  platform_cartridges.rs  raw_html.rs  site_footer.rs  site_header.rs  submission_chip_table.rs  (+1 more)
site/static/: site.webmanifest
site_generator/: Cargo.toml
site_generator/src/: css.rs  csv_export.rs  format.rs  gbhwdb.scss  legacy.rs  main.rs  site.rs  template.rs
site_generator/src/csv_export/: agb.rs  ags.rs  cartridge.rs  cgb.rs  dmg.rs  gbs.rs  mgb.rs  mgl.rs  oxy.rs  sgb.rs  sgb2.rs
site_generator/src/legacy/: cartridge.rs  chip.rs  console.rs
site_generator/src/template/: _site_header.scss  cartridge_page.rs  cartridges.rs  chip.rs  console_submission_list.rs  dmg_console_page.rs  dmg_submission_list.rs  game.rs  home.rs  listing_photos_cell.rs  mapper.rs  markdown.rs  raw_html.rs  sgb.rs  site_footer.rs  site_header.rs  submission_list.rs
src/: Site.tsx  builder.ts  config.ts  crawler.ts  metadata.ts
src/builder/: builder.ts  csvTransform.ts  processPhotos.ts
src/pages/: Contribute.tsx  Home.tsx  SgbUnit.tsx
src/site/: Site.tsx  _common.scss  format.ts  gbhwdb.scss
src/site/components/: ConsoleListingChip.tsx  ConsolePageChip.tsx  ConsolePageChipTable.tsx  ConsolePageMainboard.tsx  ConsolePageShell.tsx  SiteFooter.tsx  SiteHeader.tsx  _ConsoleListingChip.scss  _ConsolePageChip.scss  _SiteFooter.scss  _SiteHeader.scss
src/site/pages/: Agb.tsx  AgbConsole.tsx  Ags.tsx  AgsConsole.tsx  Cartridge.tsx  Cartridges.tsx  Cgb.tsx  CgbConsole.tsx  Contribute.tsx  ContributeOxy.tsx  ContributeSgb.tsx  ContributeSgb2.tsx  Dmg.tsx  DmgConsole.tsx  Game.tsx  Gbs.tsx  GbsConsole.tsx  Home.tsx  Mapper.tsx  MarkdownPage.tsx  Mgb.tsx  MgbConsole.tsx  Mgl.tsx  MglConsole.tsx  Oxy.tsx  OxyConsole.tsx  Sgb.tsx  Sgb2.tsx  Sgb2Console.tsx  SgbConsole.tsx  SgbUnit.tsx
src/styles/: _media.scss  gbhwdb.scss
src/typings/: human-date.d.ts  jimp.d.ts  url-slug.d.ts
src/util/: arrays.ts  files.ts
tools/: .gitignore  Cargo.toml
tools/src/: cursive.rs  dat.rs  gbhwdb-dat.rs  gbhwdb-submission.rs  lib.rs  photo.rs
tools/src/config/: mod.rs
tools/src/cursive/: mod.rs
tools/src/dat/: mod.rs
(+1391 files in other folders)
