# SPDX-FileCopyrightText: 2017-2023 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["deploy", "devserver", "model", "site"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
aws-config = "1.8.2"
aws-sdk-cloudfront = "1.84.0"
aws-sdk-s3 = "1.98.0"
base64 = "0.22.1"
csv = "1.3.1"
filetime = "0.2.25"
gbhwdb-model = { path = "model" }
glob = "0.3.2"
grass = { version = "0.13.4", default-features = false }
image = { version = "0.25.6", default-features = false }
itertools = "0.14.0"
lexical-sort = "0.3.1"
log = "0.4.27"
maud = "0.27.0"
md-5 = "0.10.6"
mozjpeg = "0.10.13"
nom = "8.0.0"
nom-language = "0.1.0"
pulldown-cmark = "0.13.0"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.141"
simplelog = "0.12.2"
slug = "0.1.6"
strum = "0.27.2"
swc_common = "14.0.1"
swc_css = "17.0.0"
time = "0.3.41"
tokio = "1.46.1"
tower-http = "0.6.6"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2
