# SPDX-FileCopyrightText: 2017-2023 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["deploy", "devserver", "model", "site"]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
aws-config = "1.8.10"
aws-sdk-cloudfront = "1.102.0"
aws-sdk-s3 = "1.112.0"
base64 = "0.22.1"
csv = "1.4.0"
filetime = "0.2.26"
gbhwdb-model = { path = "model" }
glob = "0.3.3"
grass = { version = "0.13.4", default-features = false }
image = { version = "0.25.8", default-features = false }
itertools = "0.14.0"
lexical-sort = "0.3.1"
log = "0.4.28"
maud = "0.27.0"
md-5 = "0.10.6"
mozjpeg = "0.10.13"
nom = "8.0.0"
nom-language = "0.1.0"
pulldown-cmark = "0.13.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
simplelog = "0.12.2"
slug = "0.1.6"
strum = "0.27.2"
swc_common = "17.0.0"
swc_css = "20.0.0"
time = "0.3.44"
tokio = "1.48.0"
tower-http = "0.6.6"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2
