# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-backend"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.64"
log = "0.4.17"
once_cell = "1.14.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.14", features = ["serde", "parsing", "formatting", "macros"] }
