# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-deploy"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.64"
base64 = "0.21.0"
log = "0.4.17"
md-5 = "0.10.4"
rayon = "1.5.3"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
simplelog = "0.12.0"
time = { version = "0.3.19", features = ["parsing"] }
tokio = { version = "1.21.0", features = ["fs", "macros", "rt-multi-thread"] }
walkdir = "2.3.2"
xdg-mime = "0.3.3"
