# SPDX-FileCopyrightText: 2017-2023 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-deploy"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
base64.workspace = true
log.workspace = true
md-5.workspace = true
rayon.workspace = true
simplelog.workspace = true
time = { workspace = true, features = ["parsing"] }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
walkdir.workspace = true
xdg-mime.workspace = true
