# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-devserver"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs"] }
