# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-site"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.64"
csv = "1.1.6"
filetime = "0.2.17"
gbhwdb-backend = { path = "../backend" }
glob = "0.3.0"
grass = { version = "0.11.2", default-features = false }
html5ever = "0.26.0"
image = "0.24.3"
itertools = "0.10.3"
log = "0.4.17"
markup5ever_rcdom = "0.2.0"
once_cell = "1.14.0"
percy-dom = "0.7.4"
pulldown-cmark = "0.9.2"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
simplelog = "0.12.0"
slug = "0.1.4"
swc_common = { version = "0.27.13", features = ["anyhow", "sourcemap"] }
swc_css = { version = "0.123.0", features = ["minifier"] }
time = { version = "0.3.14", features = ["formatting", "macros", "local-offset"] }
walkdir = "2.3.2"
