# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-site"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
filetime.workspace = true
gbhwdb-backend.workspace = true
glob.workspace = true
grass.workspace = true
html5ever.workspace = true
image.workspace = true
itertools.workspace = true
log.workspace = true
markup5ever_rcdom.workspace = true
once_cell.workspace = true
percy-dom.workspace = true
pulldown-cmark.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simplelog.workspace = true
slug.workspace = true
swc_common = { workspace = true, features = ["anyhow", "sourcemap"] }
swc_css = { workspace = true, features = ["minifier"] }
time = { workspace = true, features = ["formatting", "macros", "local-offset"] }
walkdir.workspace = true
