[package]
name = "gbhwdb-site-generator"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.57"
gbhwdb-backend = { path = "../backend" }
glob = "0.3.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slug = "0.1.4"
walkdir = "2.3.2"
