[package]
name = "gbhwdb-site-generator"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
gbhwdb-backend = { path = "../backend" }
glob = "0.3.0"
html5ever = "0.25.0"
markup5ever_rcdom = "0.1.0"
percy-dom = "0.7.1"
pulldown-cmark = "0.9.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slug = "0.1.4"
time = { version = "0.3.9", features = ["formatting", "macros", "local-offset"] }
walkdir = "2.3.2"
