[package]
name = "gbhwdb-site-generator"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
filetime = "0.2.16"
gbhwdb-backend = { path = "../backend" }
glob = "0.3.0"
grass = { version = "0.11.0", default-features = false }
html5ever = "0.25.0"
image = "0.24.2"
markup5ever_rcdom = "0.1.0"
percy-dom = "0.7.1"
pulldown-cmark = "0.9.1"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slug = "0.1.4"
swc_common = { version = "0.18.6", features = ["anyhow", "sourcemap"] }
swc_css = { version = "0.105.0", features = ["minifier"] }
time = { version = "0.3.9", features = ["formatting", "macros", "local-offset"] }
walkdir = "2.3.2"
