# SPDX-FileCopyrightText: 2017-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-tools"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.64"
clap = "4.1.6"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
gbhwdb-backend = { path = "../backend" }
glob = "0.3.0"
itertools = "0.10.3"
retro-dat = { git = "https://github.com/Gekkio/retro-dat.git" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.85"
slug = "0.1.4"
strsim = "0.10.0"
