# SPDX-FileCopyrightText: 2017-2023 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gbhwdb-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cursive.workspace = true
gbhwdb-backend.workspace = true
glob.workspace = true
image.workspace = true
itertools.workspace = true
mozjpeg.workspace = true
qcms.workspace = true
retro-dat.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
slug.workspace = true
strsim.workspace = true
temp-dir.workspace = true
